code: swagger register and logout
