# app/Http/Controllers/AuthController.php
@@ -9,6 +9,7 @@ use Illuminate\Http\Request;
 
 class AuthController extends Controller
 {
+
     public function __construct(User $user)
     {
         $this->user = $user;
@@ -161,7 +162,7 @@ class AuthController extends Controller
      *      ),
      *      @OA\Response(
      *          response=422,
-     *          description="Email already registered",
+     *          description="Validation error",
      *          @OA\JsonContent(
      *              @OA\Property(property="meta", type="object",
      *                  @OA\Property(property="code", type="number", example=422),
@@ -201,6 +202,51 @@ class AuthController extends Controller
         ], 'User created successfully');
     }
 
+    /**
+     * Logout
+     * @OA\Post (
+     *     path="/api/v1/logout",
+     *     tags={"Auth"},
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *
+     *                 ),
+     *                 example={}
+     *             )
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="meta", type="object",
+     *                  @OA\Property(property="code", type="number", example=200),
+     *                  @OA\Property(property="status", type="string", example="success"),
+     *                  @OA\Property(property="message", type="string", example="Successfully logged out"),
+     *              ),
+     *              @OA\Property(property="data", type="object", example={}),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Invalid token",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="meta", type="object",
+     *                  @OA\Property(property="code", type="number", example=422),
+     *                  @OA\Property(property="status", type="string", example="error"),
+     *                  @OA\Property(property="message", type="string", example="Unauthenticated."),
+     *              ),
+     *              @OA\Property(property="data", type="object", example={}),
+     *          )
+     *      ),
+     *      security={
+     *         {"Authorization": {}}
+     *     }
+     * )
+     */
     public function logout()
     {
         auth()->logout();
